--- a/src/main/java/com/ivo/dev/intellij/plugin/hugo/run/HugoRunSettingsEditor.form
+++ b/src/main/java/com/ivo/dev/intellij/plugin/hugo/run/HugoRunSettingsEditor.form
@@ -8,24 +8,26 @@
     <properties/>
     <border type="none"/>
     <children>
-      <component id="c3a8f" class="com.intellij.openapi.ui.TextFieldWithBrowseButton">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-      </component>
-      <vspacer id="7af23">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
-      <component id="8f5d5" class="javax.swing.JLabel">
+      <component id="b5a9c" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Hugo executable"/>
+          <text value="Arguments"/>
         </properties>
+      </component>
+      <vspacer id="757fc">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
+      <component id="761a2" class="javax.swing.JTextField" binding="argumentsField">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
