--- a/src/main/java/com/ivo/dev/intellij/plugin/hugo/run/HugoRunSettingsEditor.form
+++ b/src/main/java/com/ivo/dev/intellij/plugin/hugo/run/HugoRunSettingsEditor.form
@@ -13,7 +13,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Arguments"/>
+          <text value="Arguments:"/>
         </properties>
       </component>
       <vspacer id="757fc">
@@ -34,7 +34,7 @@
           <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Command to run"/>
+          <text value="Command to run:"/>
         </properties>
       </component>
       <component id="8b894" class="javax.swing.JRadioButton" binding="hugoServerRadioButton" default-binding="true">
